mengubah index.html dari komputer

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>404 Camp</title>
 </head>
 <body>
-    Belajar GIT
-    <h1>Semangat terus bro!</h1>
+    <h1>Program GIT Camp404</h1>
+    <p>Klik daftar untuk meningkatkan skillmu!</p>
+    <button>Daftar</button>
 </body>
 </html>
